# SoapyAfedri

./: .clang-format  CMakeLists.txt  README.md
scripts/: self_test.py
src/afedri_driver/: antenna.cpp  device_constructor.cpp  frequency.cpp  gain.cpp  helpers.cpp  registration.cpp  sample_rate.cpp  settings.cpp  soapy_afedri.hpp  streaming.cpp
src/utils/: afedri_control.cpp  afedri_control.hpp  afedri_discovery.cpp  afedri_discovery.hpp  buffer.cpp  buffer.hpp  inet_common.h  portable_utils.cpp  portable_utils.h  simple_tcp_communicator.cpp  simple_tcp_communicator.hpp  udp_rx.cpp  udp_rx.hpp
